finished vote and beautify profile page

--- a/outis_post/templates/outis_post/detail.html
+++ b/outis_post/templates/outis_post/detail.html
@@ -3,7 +3,7 @@
 
 {% block outis_staticfiles %}
 {% load staticfiles %}
-    <script src="{% static '/js/detail.js' %}"></script>
+    <script src="{% static '/post/js/detail.js' %}"></script>
 {% endblock %}
 
 
