--- a/outis_post/templates/outis_post/postcreate.html
+++ b/outis_post/templates/outis_post/postcreate.html
@@ -3,8 +3,8 @@
 
 {% block outis_staticfiles %}
 {% load staticfiles %}
-	<link type="text/css" rel="stylesheet" href="{% static '/css/postcreate.css' %}" />
-    <script src="{% static '/js/postcreate.js' %}"></script>
+	<link type="text/css" rel="stylesheet" href="{% static '/post/css/postcreate.css' %}" />
+    <script src="{% static '/post/js/postcreate.js' %}"></script>
 {% endblock %}
 
 {% block outis_body %}
